# Dji_RC_Pro

./: .gitignore  AGENTS.md  ARCHITECTURE.md  DEPENDENCIES.md  KEY_MAPPING.md  LICENSE  PROTOCOL.md  README.md  README_INTEGRATION.md  TRANSPORT.md  UI_SETTINGS.md  USB.txt  app skills.md  logcat.txt  logcat_new.txt  logcat_original.txt  logcat_tail.txt  requirements.txt  settings.gradle.kts  udp_sender.py  udp_test_sender.py
DJI MSDK/: dji-sdk-v5-networkImp-5.17.0.aar
Docs/: API_Reference.md  DJI_MSDK_Components_CN.md  Deployment_Guide.md  ERROR_LOG.md  README.md  Technical_Documentation.md  Troubleshooting_Log.md  UDP_Module.md  development.md  documentation_structure.json  documentation_structure.md  修复 C1_C2 按键并添加权限与常亮功能.md  头脑风暴.md
ErrorHistory/: logcat.txt
app/: build.gradle.kts  proguard-rules.pro
gradle/: libs.versions.toml
prompts/: System_Prompt.md
ros2_ws_dji_rc_pro/src/dji_rc_pro_bridge/: CMakeLists.txt  package.xml
ros2_ws_dji_rc_pro/src/dji_rc_pro_bridge/config/: dji_rc_pro_joy.config.yaml
ros2_ws_dji_rc_pro/src/dji_rc_pro_bridge/include/dji_rc_pro_bridge/: client_address_snapshot.hpp  joy_mapper.hpp  raw_input.hpp
ros2_ws_dji_rc_pro/src/dji_rc_pro_bridge/include/protocol/: protocol_parser.hpp
ros2_ws_dji_rc_pro/src/dji_rc_pro_bridge/launch/: dji_rc_pro_gateway.launch.py  dji_rc_pro_stack.launch.py
ros2_ws_dji_rc_pro/src/dji_rc_pro_bridge/msg/: ChassisCtrl.msg
ros2_ws_dji_rc_pro/src/dji_rc_pro_bridge/src/: joy_mapper.cpp  raw_input.cpp
ros2_ws_dji_rc_pro/src/dji_rc_pro_bridge/src/protocol/: protocol_parser.cpp
ros2_ws_dji_rc_pro/src/dji_rc_pro_bridge/src/tools/: dji_rc_pro_ble_gateway.py  dji_rc_pro_gateway.cpp  dji_rc_pro_joy_to_cmd_vel.cpp
ros2_ws_dji_rc_pro/src/dji_rc_pro_bridge/test/: test_ble_gateway_executable.py  test_ble_gateway_ip_fields.py  test_client_address_snapshot.cpp  test_joy_mapper.cpp  test_raw_input_bridge.cpp
scripts/: adb_capture_transport_logs.sh  adb_capture_udp_logs.sh  adb_set_udp_target.sh  build_ros2_dji_rc_pro_ws.sh  run_dji_rc_pro_ble_only.sh  run_dji_rc_pro_gateway.sh  (+1 more)
(+1300 files in other folders)
